# heat_transfer

./: .gitignore  Cargo.toml  benchmarks.txt  readme.md
fds/1D/Adiabatic/: template_heat_transfer.fds
fds/1D/AdiabaticSpeedTest/: template_heat_transfer.fds
fds/1D/Diabatic/: template_heat_transfer.fds
fds/1D/Diabatic/multiple/1/: heat_transfer.fds
fds/1D/Diabatic/multiple/16/: heat_transfer.fds
fds/1D/Diabatic/multiple/2/: heat_transfer.fds  result
fds/1D/Diabatic/multiple/4/: heat_transfer.fds
fds/1D/Diabatic/multiple/8/: heat_transfer.fds
fds/1D/Diabatic/thickness_steel_k_c/005cm/: heat_transfer.fds
fds/1D/Diabatic/thickness_steel_k_c/010cm/: heat_transfer.fds
fds/1D/Diabatic/thickness_steel_k_c/050cm/: heat_transfer.fds
fds/1D/Diabatic/thickness_steel_k_c/100cm/: heat_transfer.fds
fds/1D/Diabatic/thickness_steel_k_c/500cm/: heat_transfer.fds
fds/1D/DiabaticOneSide/: template_heat_transfer.fds
src/: main.rs  modification.rs
src/benchmark/: mod.rs
src/fds/: benchmark.rs  device.rs  material.rs  meta.rs  mod.rs  parser.rs  ramp.rs  sampler.rs  simulations.rs  surface.rs
src/heat_transfer/: gpu.rs  mod.rs  shader.rs
src/heat_transfer/one_dimensional/: cpu.rs  gpu_m1.rs  gpu_m1.wgsl  gpu_m2.rs  gpu_m2.wgsl  gpu_m3.rs  gpu_m3.wgsl  mod.rs
src/heat_transfer/simulations/: benchmark.rs  mod.rs  temperature.rs
src/plot/: mod.rs
src/plot/kind/: benchmark_box_plot.rs  benchmark_factor_plot.rs  helper_cell_count.rs  helper_ramps_plot.rs  helper_transistor.rs  mod.rs  temperature_diff.rs
